--- a/00_data_preparation.ipynb
+++ b/00_data_preparation.ipynb
@@ -43,7 +43,8 @@
     "from sklearn import preprocessing, metrics\n",
     "import boto3\n",
     "import pandas as pd\n",
-    "from sagemaker import get_execution_role\n"
+    "from sagemaker import get_execution_role\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -111,7 +112,7 @@
    "source": [
     "role = get_execution_role()\n",
     "bucket='sagemaker-eu-central-1-594657351600'\n",
-    "prefix = 'kaggle-m5/00_data'\n"
+    "prefix = 'kaggle-m5/00_data'"
    ]
   },
   {
@@ -825,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +944,7 @@
        "4       CA  d_1       0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,6 +976,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The data contains categorial variables 'id', 'item_id', 'dept_id', 'cat_id', 'store_id', 'state_id'. We will use the variable 'd' to add calendar data to X."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is no NaN data in X."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.isnull().values.any()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Remove rows before  release date"
    ]
   },
@@ -994,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1102,7 @@
        "4     CA_1  FOODS_1_005     11101"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1195,7 @@
        "4     11105         d_29  2011-02-26"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1294,7 @@
        "4     CA_1  FOODS_1_005     11101          d_1  2011-01-29"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,11 +1333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = X.merge(start_sales_df[['store_id', 'item_id', 'start_date']],  on=['store_id', 'item_id'], how='left')\n"
+    "X = X.merge(start_sales_df[['store_id', 'item_id', 'start_date']],  on=['store_id', 'item_id'], how='left')"
    ]
   },
   {
@@ -1314,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1744,15 +1779,6 @@
    "source": [
     "X['avg_price'] = X.groupby(['id'])['sell_price'].transform('mean') \n",
     "X['cheaper_than_usual'] = ( X['sell_price'] < X['avg_price'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#X = X.drop(columns = ['min_weekday_demand'])"
    ]
   },
   {
