--- a/01_naive_predictors.ipynb
+++ b/01_naive_predictors.ipynb
@@ -627,6 +627,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The score of this submission is 1.29429"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Sales on the same weekday"
    ]
   },
@@ -780,6 +794,20 @@
    "outputs": [],
    "source": [
     "naive_prediction_weekly.to_csv(\"../04_submissions/naive_prediction_weekly.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The score of this submission is 0.88878"
    ]
   }
  ],
