--- a/03_lightGBM.ipynb
+++ b/03_lightGBM.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use tree-based algorithms since they are powerful and do not impose strict assumptions on features like linearity or independence. Light GBM is a fast algorithm with lower memory usage."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -259,6 +266,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We look at the mean absolute error by forecastablity in order to indestand what category needs more improvement for prediction."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -337,6 +351,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Surprisingly smooth time series has a large mean absolute error. Erratic time series has a large mean absolute error; typically time series of this type is difficult to predict."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature importance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
@@ -372,34 +400,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transform predictions to the right format"
+    "'item_id' and 'id' are most important features. 'days_from_start' reflect the trend of data. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['id', 'item_id', 'dept_id', 'cat_id', 'store_id', 'state_id', 'weekday',\n",
-       "       'month', 'event_name_1', 'event_type_1', 'event_name_2', 'event_type_2',\n",
-       "       'snap_CA', 'snap_TX', 'snap_WI', 'days_from_start',\n",
-       "       'start_date_from_start', 'sell_price', 'ADI', 'CV2', 'forecastability',\n",
-       "       'avg_weekday_demand', 'avg_demand', 'max_demand', 'quantile025_week',\n",
-       "       'max_weekday_demand', 'avg_price', 'cheaper_than_usual', 'lag_28',\n",
-       "       'lag_29', 'lag_35', 'rmean_28_7', 'rmean_28_28', 'items_sold'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "X_test.columns"
+    "## Transform prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transform predictions to the right format"
    ]
   },
   {
@@ -666,18 +681,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Score"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The score of this submission is 0.58584, which is better than naive prediction."
+   ]
   }
  ],
  "metadata": {
