feat: add more lags

--- a/05_lightGBM_more_lags.ipynb
+++ b/05_lightGBM_more_lags.ipynb
@@ -125,7 +125,9 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "Training until validation scores don't improve for 100 rounds\n"
+      "Training until validation scores don't improve for 100 rounds\n",
+      "[100]\ttraining's rmse: 2.3363\tvalid_1's rmse: 1.95621\n",
+      "[200]\ttraining's rmse: 2.25797\tvalid_1's rmse: 1.92643\n"
      ]
     }
    ],
