chore: delete cjeckpoints

--- a/03_lightGBM.ipynb
+++ b/03_lightGBM.ipynb
@@ -240,7 +240,20 @@
       "[100]\ttraining's rmse: 2.3677\tvalid_1's rmse: 2.24204\n",
       "[200]\ttraining's rmse: 2.30043\tvalid_1's rmse: 2.1933\n",
       "[300]\ttraining's rmse: 2.26129\tvalid_1's rmse: 2.16385\n",
-      "[400]\ttraining's rmse: 2.23646\tvalid_1's rmse: 2.1614\n"
+      "[400]\ttraining's rmse: 2.23646\tvalid_1's rmse: 2.1614\n",
+      "[500]\ttraining's rmse: 2.21589\tvalid_1's rmse: 2.16056\n",
+      "[600]\ttraining's rmse: 2.19961\tvalid_1's rmse: 2.15727\n",
+      "[700]\ttraining's rmse: 2.18651\tvalid_1's rmse: 2.15861\n",
+      "[800]\ttraining's rmse: 2.1741\tvalid_1's rmse: 2.1597\n",
+      "[900]\ttraining's rmse: 2.16391\tvalid_1's rmse: 2.16576\n",
+      "[1000]\ttraining's rmse: 2.15409\tvalid_1's rmse: 2.16814\n",
+      "[1100]\ttraining's rmse: 2.14552\tvalid_1's rmse: 2.16683\n",
+      "[1200]\ttraining's rmse: 2.13501\tvalid_1's rmse: 2.17179\n",
+      "[1300]\ttraining's rmse: 2.1272\tvalid_1's rmse: 2.17077\n",
+      "[1400]\ttraining's rmse: 2.12026\tvalid_1's rmse: 2.18117\n",
+      "[1500]\ttraining's rmse: 2.11445\tvalid_1's rmse: 2.18098\n",
+      "[1600]\ttraining's rmse: 2.10876\tvalid_1's rmse: 2.18049\n",
+      "[1700]\ttraining's rmse: 2.10292\tvalid_1's rmse: 2.18094\n"
      ]
     }
    ],
