chore: delete checkpoints

--- a/03_lightGBM.ipynb
+++ b/03_lightGBM.ipynb
@@ -253,7 +253,8 @@
       "[1400]\ttraining's rmse: 2.12026\tvalid_1's rmse: 2.18117\n",
       "[1500]\ttraining's rmse: 2.11445\tvalid_1's rmse: 2.18098\n",
       "[1600]\ttraining's rmse: 2.10876\tvalid_1's rmse: 2.18049\n",
-      "[1700]\ttraining's rmse: 2.10292\tvalid_1's rmse: 2.18094\n"
+      "[1700]\ttraining's rmse: 2.10292\tvalid_1's rmse: 2.18094\n",
+      "[1800]\ttraining's rmse: 2.09668\tvalid_1's rmse: 2.18389\n"
      ]
     }
    ],
