--- a/01_data_preparation-artificial-features.ipynb
+++ b/01_data_preparation-artificial-features.ipynb
@@ -72,11 +72,11 @@
       "metadata": {
         "id": "ZlhptmTuLngK",
         "colab_type": "code",
+        "outputId": "ae3ef4f7-81f4-4e40-9f88-640cb4753d2d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        },
-        "outputId": "6ea17d94-0ec8-4652-ae69-8d75007be47e"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -109,11 +109,11 @@
       "metadata": {
         "id": "IAxSKDruLsBa",
         "colab_type": "code",
+        "outputId": "47531d5f-99b1-48b2-fd69-b760db20ad1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 56
-        },
-        "outputId": "fcc96106-a96a-44aa-9aef-f8cef7b11c51"
+          "height": 131
+        }
       },
       "source": [
         "from google.colab import drive\n",
@@ -124,7 +124,11 @@
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -202,11 +206,11 @@
       "metadata": {
         "id": "v3ekYfU5LngY",
         "colab_type": "code",
+        "outputId": "534783a3-dafd-458c-947e-28fa47b12c52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "42c60dad-542a-43e9-da64-40ba94376cd4"
+        }
       },
       "source": [
         "print('Reading files...')\n",
@@ -230,11 +234,11 @@
       "metadata": {
         "id": "gPrmQBEtLnge",
         "colab_type": "code",
+        "outputId": "e2d18ae0-6f17-4cf0-c88c-0c49b95b4b97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 226
-        },
-        "outputId": "883bbf2e-09dd-4add-8430-0920c52e0376"
+        }
       },
       "source": [
         "X.tail()"
@@ -462,11 +466,11 @@
       "metadata": {
         "id": "i9p434u8Lngj",
         "colab_type": "code",
+        "outputId": "f467824f-dfd7-43c1-a191-9c25459f768c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
-        },
-        "outputId": "8212e835-638e-4c0c-8088-2c1ace07f586"
+        }
       },
       "source": [
         "lags = [x for x in range(28, 28+8)]\n",
@@ -502,10 +506,10 @@
             "Lag 33\n",
             "Lag 34\n",
             "Lag 35\n",
-            "Mem. usage decreased to 4025.37 Mb (40.0% reduction)\n",
+            "Mem. usage decreased to 3444.25 Mb (43.8% reduction)\n",
             "Lag 28, window 3\n",
             "Lag 28, window 7\n",
-            "Mem. usage decreased to 4204.21 Mb (0.0% reduction)\n"
+            "Mem. usage decreased to 3623.09 Mb (0.0% reduction)\n"
           ],
           "name": "stdout"
         }
@@ -516,11 +520,11 @@
       "metadata": {
         "id": "Efn1n-WDLngn",
         "colab_type": "code",
+        "outputId": "277be8b3-9aab-4b4f-b0ff-e97547a0ee69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 167
-        },
-        "outputId": "05882743-202b-4a64-8362-e3486691e9e8"
+        }
       },
       "source": [
         "X.columns"
@@ -631,11 +635,11 @@
       "metadata": {
         "id": "4q8SH17MLnhB",
         "colab_type": "code",
+        "outputId": "83c6ce67-8a0d-4503-919f-99bd2061e6b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "2a31bfc8-e320-4d88-a161-83cfd97ba7cb"
+        }
       },
       "source": [
         "print(\"first_val_day {}\".format(first_val_day))\n",
@@ -692,11 +696,11 @@
       "metadata": {
         "id": "RibzBjX4LnhM",
         "colab_type": "code",
+        "outputId": "73c3fa6c-4f9b-4ce9-bd2a-2b7aef53e7e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
-        },
-        "outputId": "f14dfbf5-6716-4f42-955e-59ed8bd3b776"
+        }
       },
       "source": [
         "print(\"X dates:\")\n",
@@ -793,11 +797,11 @@
       "metadata": {
         "id": "8nXkrqlQLnhc",
         "colab_type": "code",
+        "outputId": "af796112-5c51-41e8-f01f-3b044b255e16",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 129
-        },
-        "outputId": "b09d0723-c971-463c-d90a-afc33348184d"
+          "height": 0
+        }
       },
       "source": [
         "temp = X_train.groupby(['id'])['demand'].sum() \n",
@@ -1106,25 +1110,25 @@
       "metadata": {
         "id": "SOAg7hqcdhJ6",
         "colab_type": "code",
+        "outputId": "ae906bca-2d87-430a-9aea-ceb17bcdae34",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 73
-        },
-        "outputId": "b2ba60b6-2db6-4643-a7c4-f6520d2369fd"
+          "height": 0
+        }
       },
       "source": [
         "X_train = reduce_mem_usage(X_train)\n",
         "X_val = reduce_mem_usage(X_val)\n",
         "X_test = reduce_mem_usage(X_test)\n"
       ],
-      "execution_count": 34,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mem. usage decreased to 4712.63 Mb (0.0% reduction)\n",
-            "Mem. usage decreased to 92.67 Mb (24.0% reduction)\n",
-            "Mem. usage decreased to 91.86 Mb (24.7% reduction)\n"
+            "Mem. usage decreased to 4165.90 Mb (26.7% reduction)\n",
+            "Mem. usage decreased to 82.19 Mb (26.3% reduction)\n",
+            "Mem. usage decreased to 81.38 Mb (27.0% reduction)\n"
           ],
           "name": "stdout"
         }
@@ -1170,11 +1174,11 @@
       "metadata": {
         "id": "ey3JM1w5LniP",
         "colab_type": "code",
+        "outputId": "e9d266e7-9e00-4982-c3dc-8e1541791245",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "0ea100ce-be71-4d97-f5c3-9958bfede4b8"
+          "height": 0
+        }
       },
       "source": [
         "X_val.columns"
@@ -1219,24 +1223,50 @@
       "metadata": {
         "id": "valSZIuWLniR",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "47d1e963-ba5f-4015-dc4b-25f4cbffecea"
       },
       "source": [
         "X_train.columns"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['id', 'item_id', 'dept_id', 'cat_id', 'store_id', 'state_id', 'd',\n",
+              "       'demand', 'date', 'weekday', 'month', 'event_name_1', 'event_type_1',\n",
+              "       'year', 'event_name_2', 'event_type_2', 'snap_CA', 'snap_TX', 'snap_WI',\n",
+              "       'start_date', 'days_from_start', 'start_date_from_start', 'sell_price',\n",
+              "       'lag_28', 'lag_29', 'lag_30', 'lag_31', 'lag_32', 'lag_33', 'lag_34',\n",
+              "       'lag_35', 'rmean_28_3', 'rmean_28_7', 'ADI', 'CV2', 'demand_type',\n",
+              "       'avg_weekday_demand', 'avg_demand', 'max_demand', 'std_demand',\n",
+              "       'quantile025_week', 'max_weekday_demand', 'avg_price',\n",
+              "       'cheaper_than_usual'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "J7xs9aqmLniV",
         "colab_type": "code",
+        "outputId": "d323c5c5-2179-4bf2-a30a-0a913be503c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 391
-        },
-        "outputId": "6a1c6d64-26b2-4a2d-a640-ee100222bde5"
+        }
       },
       "source": [
         "numerical_features = ['days_from_start', 'sell_price',\n",
@@ -1247,7 +1277,7 @@
         "for feature in numerical_features:\n",
         "    print(\"{}: {}\".format(feature, X_train[feature].corr(X_train['demand'])))"
       ],
-      "execution_count": 39,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1282,18 +1312,18 @@
       "metadata": {
         "id": "yabnxL0TLniX",
         "colab_type": "code",
+        "outputId": "66b1759b-dde2-4dd7-dac8-ba2be9701f68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 331
-        },
-        "outputId": "1b57669c-746b-41b3-e906-16af99e6cb33"
+        }
       },
       "source": [
         "numerical_features = ['lag_28', 'lag_29', 'lag_30', 'lag_31', 'lag_32', 'lag_33', 'lag_34',\n",
         "       'rmean_28_7', 'rmean_28_3']\n",
         "X_train[numerical_features].corr()\n"
       ],
-      "execution_count": 41,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1459,7 +1489,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 39
         }
       ]
     },
@@ -1478,11 +1508,11 @@
       "metadata": {
         "id": "Shi1BvXOLnib",
         "colab_type": "code",
+        "outputId": "53453401-fe56-45a3-b901-8cfc7bf251fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 167
-        },
-        "outputId": "8beb58c5-f947-4cc8-aa3a-f22aa264de23"
+        }
       },
       "source": [
         "X_train = X_train.dropna()\n",
@@ -1493,7 +1523,7 @@
         "    X_test[X_test['demand_type'] == i].to_pickle(data_folder + \"X_test_{}.pkl\".format(i))\n",
         "    print()"
       ],
-      "execution_count": 44,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -1516,16 +1546,16 @@
       "metadata": {
         "id": "Mev-KSKLLnie",
         "colab_type": "code",
+        "outputId": "0f90cb5d-907d-41b8-9327-3aae798f5bba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "fb785ea1-4c3b-4ef4-80d5-79bcac9b9283"
+        }
       },
       "source": [
         "X_test.columns"
       ],
-      "execution_count": 45,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1546,7 +1576,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 41
         }
       ]
     },
@@ -1562,6 +1592,110 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FQyODSM9ETql",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Save by store_id"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_sKu9ZnOEkX4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "stores = X_test['store_id'].values.unique()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j7JuYukAUj_q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "1d5c4c64-4d3f-4d1c-a654-76823f427140"
+      },
+      "source": [
+        "stores"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[CA_1, CA_2, CA_3, CA_4, TX_1, TX_2, TX_3, WI_1, WI_2, WI_3]\n",
+              "Categories (10, object): [CA_1, CA_2, CA_3, CA_4, ..., TX_3, WI_1, WI_2, WI_3]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JyFW98iIEdWh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 391
+        },
+        "outputId": "e626c3a7-6f70-44ab-feea-8bcc220f9987"
+      },
+      "source": [
+        "\n",
+        "for i in stores:\n",
+        "    print(i)\n",
+        "    X_val[X_val['store_id'] == i].to_pickle(data_folder + \"X_val_{}.pkl\".format(i))\n",
+        "    X_train[X_train['store_id'] == i].to_pickle(data_folder + \"X_train_{}.pkl\".format(i))\n",
+        "    X_test[X_test['store_id'] == i].to_pickle(data_folder + \"X_test_{}.pkl\".format(i))\n",
+        "    print()"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "CA_1\n",
+            "\n",
+            "CA_2\n",
+            "\n",
+            "CA_3\n",
+            "\n",
+            "CA_4\n",
+            "\n",
+            "TX_1\n",
+            "\n",
+            "TX_2\n",
+            "\n",
+            "TX_3\n",
+            "\n",
+            "WI_1\n",
+            "\n",
+            "WI_2\n",
+            "\n",
+            "WI_3\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
